# Training

./: README.md
.github/workflows/: send_email.yml
birthday-image-viewer/.next/: trace
nextjs-dashboard/: package.json  pnpm-lock.yaml
nextjs-dashboard/app/: page.tsx
nextjs-dashboard/app/dashboard/: layout.tsx  page.tsx
nextjs-dashboard/app/dashboard/customers/: page.tsx
nextjs-dashboard/app/dashboard/invoices/: page.tsx
nextjs-dashboard/app/dashboard/wsj/: card.tsx  columns.tsx  data-table.tsx  page.tsx
nextjs-dashboard/app/ui/: fonts.ts  global.css
nextjs-dashboard/app/ui/dashboard/: nav-links.tsx
nextjs-dashboard/app/utils/supabase/: server.ts
nextjs-dashboard/components/ui/: card.tsx
rust_project/hello_rust/: .env  Cargo.toml
rust_project/hello_rust/.github/workflows/: send_email.yml
rust_project/hello_rust/src/: main.rs
rust_project/hello_rust/src/.github/workflows/: send_email.yml
training_01/: package.json
training_01/src/app/: page.tsx
