[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
lettre = "0.10" # For sending emails
dotenv = "0.15" # For environment variables
serde_json = "1.0.140"
rand = "0.9.1"
